# nyatris

./: Conclusion.latex  Implementation.latex  Introduction.latex  Task.latex  Title.latex  bib.bib  main.latex  preamble.latex  wscript
report/: Code.lhs  Conclusion.latex  Implementation.latex  Introduction.latex  Task.latex  bib.bib  main.latex  preamble.latex  wscript
report/images/: global.eps  logics.eps
src/: README.md  nyatris.cabal  nyatris.hs  nyatris.lhs  wscript
src/Nyatris/: Random.hs  Shape.hs
